# paddleocr-guide

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  README_en.md  README_zh.md  pyproject.toml  requirements.txt
.claude/commands/: checkpoint.md  end.md  lint.md  start.md  weekly.md
.github/workflows/: ci.yml
docs/ai-context/: CONTEXT.md  CURRENT.md
docs/development/: DEVELOPMENT.md  examples.md
docs/en/: api_reference.md  installation.md  model_comparison.md  troubleshooting.md
docs/guides/: README.md
docs/zh/: README.md  api_reference.md  best_practices.md  case_studies.md  deployment.md  error_codes.md  installation.md  model_comparison.md  performance.md  quickstart.md  troubleshooting.md
examples/: README.md
examples/_common/: __init__.py  base.py  config.py  exceptions.py  logging_config.py  utils.py
examples/advanced/: 01_seal_recognition.py  02_formula_recognition.py  03_chart_recognition.py  04_chatocr_extraction.py  05_handwriting_ocr.py  06_vertical_text.py  07_doc_preprocessing.py  08_paddleocr_vl.py  09_doc_translation.py  10_doc_understanding.py
examples/basic/: 01_simple_ocr.py  02_batch_ocr.py  03_multilingual.py  __init__.py
examples/document/: 01_pdf_to_markdown.py  02_table_recognition.py  03_layout_analysis.py
paddleocr_guide/: __init__.py  cli.py
tests/: __init__.py  conftest.py  test_basic_ocr.py  test_common.py  test_memory_usage.py
